Ficha Edgar Montaluisa

--- a/edgar-montaluisa.html
+++ b/edgar-montaluisa.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Galeria Programación WEB</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+
+            </div>
+            <div class="col-4 text-center">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="img/edgar-montaluisa.png" class="card-img-top" alt="Edgar Montaluisa">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">EDGAR FABIAN MONTALUISA</h5>
+                                <p class="card-text">Docente de la Universidad de las Fuerzas Armadas ESPE Sede
+                                    Latacunga
+                                </p>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Programación Web</li>
+                                <li class="list-group-item">Aplicaciones Distribuidas</li>
+                                <li class="list-group-item">Arquitectura de Software</li>
+                            </ul>
+                            <div class="card-body">
+                                <a href="index.html" class="btn btn-primary">Ir al Inicio</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+
+            </div>
+        </div>
+    </div>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
