--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
             </div>
             <div class="col-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="img/edgar-montaluisa.png" class="card-img-top" alt="Edgar Montaluisa">
                     <div class="card-body">
-                        <h5 class="card-title">MONTALUISA</h5>
-                        <a href="#" class="btn btn-primary">Ver Ficha</a>
+                        <h5 class="card-title">EDGAR MONTALUISA</h5>
+                        <a href="edgar-montaluisa.html" class="btn btn-primary">Ver Ficha</a>
                     </div>
                 </div>
             </div>
