--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">VILLAGRAN</h5>
-                        <a href="#" class="btn btn-primary">Ver Ficha</a>
+                        <a href="edri-villagran.html" class="btn btn-primary">Ver Ficha</a>
                     </div>
                 </div>
             </div>
