Ficha Andres Rodriguez

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
             </div>
             <div class="col-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="img/andresRodriguez.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">RODRIGUEZ</h5>
-                        <a href="#" class="btn btn-primary">Ver Ficha</a>
+                        <a href="andresRodriguez.html" class="btn btn-primary">Ver Ficha</a>
                     </div>
                 </div>
             </div>
