Ficha Joan-Velasco

--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
             </div>
             <div class="col-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="img/joan.png" class="card-img-top" style="height: 250px;" alt="Imagen de Joan">
                     <div class="card-body">
                         <h5 class="card-title">VELASCO</h5>
-                        <a href="#" class="btn btn-primary">Ver Ficha</a>
+                        <a href="joan-velasco.html" class="btn btn-primary">Ver Ficha</a>
                     </div>
                 </div>
             </div>
