Ficha Hernan Iturralde

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             </div>
             <div class="col-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="img/iturraldeHernan.jpg" class="card-img-top" alt="Imagen Hernan Iturralde">
                     <div class="card-body">
                         <h5 class="card-title">ITURRALDE</h5>
-                        <a href="#" class="btn btn-primary">Ver Ficha</a>
+                        <a href="hernan-iturralde.html" class="btn btn-primary">Ver Ficha</a>
                     </div>
                 </div>
             </div>
