Ficha Xavier-Chiguano

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <div class="row">
             <div class="col-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="perfil" class="card-img-top" alt="perfil">
                     <div class="card-body">
                         <h5 class="card-title">CHIGUANO</h5>
-                        <a href="#" class="btn btn-primary">Ver Ficha</a>
+                        <a href="xavier-chiguano.html" class="btn btn-primary">Ver Ficha</a>
                     </div>
                 </div>
             </div>
