--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <div class="row">
             <div class="col-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="img/EdriV.jpeg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">VILLAGRAN</h5>
                         <a href="edri-villagran.html" class="btn btn-primary">Ver Ficha</a>
