--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
             </div>
             <div class="col-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="img/VELA_PERFIL.jpg" class="card-img-top" alt="Foto de perfil">
                     <div class="card-body">
                         <h5 class="card-title">VELA</h5>
-                        <a href="#" class="btn btn-primary">Ver Ficha</a>
+                        <a href="danny-vela.html" class="btn btn-primary">Ver Ficha</a>
                     </div>
                 </div>
             </div>
