--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
                 </div>
             </div>
             <div class="col-3">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                <div class="card " style="width: 18rem;">
+                    <img src="img/alex-vilcacundo.jpg" class="card-img-top " alt=" Alex Vilcacundo">
                     <div class="card-body">
                         <h5 class="card-title">VILCACUNDO</h5>
-                        <a href="#" class="btn btn-primary">Ver Ficha</a>
+                        <a href="alex-vilcacundo.html" class="btn btn-primary">Ver Ficha</a>
                     </div>
                 </div>
             </div>
