Ficha Danny-Vela

--- a/danny-vela.html
+++ b/danny-vela.html
@@ -9,24 +9,25 @@
 </head>
 <body>
 <div class="container" >
-    <img src="img/VELA_PERFIL.jpg" alt="Perfil Curriculum" width="200px" height="200px" >
+    <img src="img/VELA_PERFIL.jpg" alt="Perfil Curriculum" width="300px" height="300px" style="float: right;" >
     <h1>Datos Personales</h1>
-    <h3 style="color:rgb(0, 0, 0);">Nombres:</h3><p>Danny Alejandro</p>
-    <h3 style="color:rgb(0, 0, 0);">Apellidos:</h3> <p>Vela Mena</p>
-    <h3 style="color:rgb(0, 0, 0);">CI: </h3><p>0504218793</p>
-    <h3 style="color:rgb(0, 0, 0);">Estado Civil: </h3><p>Soltero</p>
-    <h3 style="color:rgb(0, 0, 0);">Lugar de nacimiento: </h3><p>Latacunga</p>
-    <h3 style="color:rgb(0, 0, 0);">Edad:</h3> <p>21 años</p>
-    <h3 style="color:rgb(0, 0, 0);">Nacionalidad: </h3><p>Ecuatoriana</p>
-    <h3 style="color:rgb(0, 0, 0);">Dirección:</h3> <p>Urb. Nueva Vida</p>
-    <h3 style="color:rgb(0, 0, 0);">Telefono:</h3> <p>0991984909</p>
-    <h3 style="color:rgb(0, 0, 0);">Email:</h3> <p>davela5@espe.edu.ec</p>
+    <h3 style="color:rgb(0, 0, 0);">♦ Nombres:Danny Alejandro</h3>
+    <h3 style="color:rgb(0, 0, 0);">♦ Apellidos:Vela Mena</h3>
+    <h3 style="color:rgb(0, 0, 0);">♦ CI: 0504218793</h3>
+    <h3 style="color:rgb(0, 0, 0);">♦ Estado Civil: Soltero</h3>
+    <h3 style="color:rgb(0, 0, 0);">♦ Lugar de nacimiento: Latacunga</h3>
+    <h3 style="color:rgb(0, 0, 0);">♦ Edad:21 años</h3>
+    <h3 style="color:rgb(0, 0, 0);">♦ Nacionalidad: Ecuatoriana</h3>
+    <h3 style="color:rgb(0, 0, 0);">♦ Dirección:Urb. Nueva Vida</h3>
+    <h3 style="color:rgb(0, 0, 0);">♦ Telefono:0991984909</h3>
+    <h3 style="color:rgb(0, 0, 0);">♦ Email:davela5@espe.edu.ec</h3>
     <h1>Estudios realizados</h1>
-    <h3 style="color:rgb(0, 0, 0);">Primaria:</h3> <p>Unidad Educativa FAE</p>
-    <h3 style="color:rgb(0, 0, 0);">Secundaria:</h3> <p>Unidad Educativa FAE</p>
-    <h3 style="color:rgb(0, 0, 0);">Titulo obtenido:</h3> <p>Bachiller en Ciencias</p>
+    <h3 style="color:rgb(0, 0, 0);">♦ Primaria:Unidad Educativa FAE</h3>
+    <h3 style="color:rgb(0, 0, 0);">♦ Secundaria:Unidad Educativa FAE</h3>
+    <h3 style="color:rgb(0, 0, 0);">♦ Titulo obtenido:Bachiller en Ciencias</h3>
     <h1>Estudios superiores</h1>
-    <h3 style="color:rgb(0, 0, 0);">Titulo obtenido:</h3> <p>Conductor Profesional Licencia Tipo C</p>
+    <h3 style="color:rgb(0, 0, 0);">♦ Estudiante de la carrera de Ingeniería en Software</h3>
+    <h3 style="color:rgb(0, 0, 0);">♦ Titulo obtenido:Conductor Profesional Licencia Tipo C</h3>
     <h1>Lenguajes de programacion conocidos</h1>
     <p>♦ C/C++</p>
     <p>♦ Java</p>
