Ficha Dalila-Pazmino

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         <div class="row">
             <div class="col-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="img/perfil.jpg" class="" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">PAZMIÑO</h5>
-                        <a href="#" class="btn btn-primary">Ver Ficha</a>
+                        <a href="dalila_pazmino.html" class="btn btn-primary">Ver Ficha</a>
                     </div>
                 </div>
             </div>
@@ -176,10 +176,10 @@
             </div>
             <div class="col-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="img/edgar-montaluisa.png" class="card-img-top" alt="Edgar Montaluisa">
+                    <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">EDGAR MONTALUISA</h5>
-                        <a href="edgar-montaluisa.html" class="btn btn-primary">Ver Ficha</a>
+                        <h5 class="card-title">MONTALUISA</h5>
+                        <a href="#" class="btn btn-primary">Ver Ficha</a>
                     </div>
                 </div>
             </div>
