Ficha Gilberto Parra

--- a/edgar-montaluisa.html
+++ b/edgar-montaluisa.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MI CURICULUM</title>
 </head>
 <body>
-    
+<p>CURRICULUM VITAE</p>
+<P>GILBERTO RODRIGO PARRA SUAREZ</P>
+<img src="gilbertoParra.jpg" width="200">
+<fieldset>
+    <h2>
+    DATOS PERSONALES </h2></legend> </center>
+<ul>
+ <li> <ch3> CEDULA:1804472395
+    <li> <ch3> EDAD:20 
+        <li> <ch3> FECHA NACIMIENTO:06/07/2001
+            <li> <ch3> DIRECCION:Av.Atahualpa y Calichuchima
+                <li> <ch3> CELULAR:0995434041
+                    <li> <ch3> CORREO ELECTRONICO:sprg565@gmail.com
+</ul>
+<legend><h2>FORMACION ACADEMICA</h2></legend></center>
+<li> <ch3> PRIMARIA:Unidad Educativa "La Granja"
+    <li> <ch3> SECUNDARIA:Unidad Educativa "San Pio X"
+        <li> <ch3> UNIVERSIDAD:Universidad de las Fuerzas Armadas "ESPE"
+            <li> <ch3> CARRERA:Ing.Software   
 </body>
 </html>
