--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria Programación WEB</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-
 </head>
 
 <body>
@@ -91,10 +90,10 @@
         <div class="row">
             <div class="col-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
+                    <img src="img/jordan.jpg" class="card-img-top" alt="Jordan Talahua">
+                    <div class="card-body" style="text-align:center">
                         <h5 class="card-title">TALAHUA</h5>
-                        <a href="#" class="btn btn-primary">Ver Ficha</a>
+                        <a target="_blank" href="jordan-talahua.html" class="btn btn-primary">Ver Ficha</a>
                     </div>
                 </div>
             </div>
