--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">VARGAS</h5>
-                        <a href="#" class="btn btn-primary">Ver Ficha</a>
+                        <center><img src="img/davidvargas.jpeg" class="card-img-top" alt="" class="d-flex flex-row-reverse"></center>
+                        <a href="david-vargas.html" class="btn btn-primary">Ver Ficha</a>
                     </div>
                 </div>
             </div>
