Ficha Dalila-Pazmino

--- a/dalila_pazmino.html
+++ b/dalila_pazmino.html
@@ -17,6 +17,8 @@
                             <h3 class="card-title">Dalila Pazmino</h3>
                             <h5 class="card-text">Edad:</h5>
                             <p class="card-text"> 21 años </p>
+                            <h5 class="card-text">Ciudad :</h5>
+                            <p class="card-text"> Latacunga </p>
                             <h5 class="card-text">Pasatiempos :</h5>
                             <p class="card-text"> Jugar basqueth </p>
                             <p class="card-text"> Escuchar muscia </p>
